theme: reserve space for anchor icon to avoid overflow-y #364

--- a/static/css/ie.css
+++ b/static/css/ie.css
@@ -136,6 +136,10 @@
 		font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif; /* var(--MAIN-TITLES-TEXT-font) */
 	}
 
+	h2, h3, h4, h5, h6 {
+		padding-right: 2rem;
+	}
+
 	div.box {
 		background-color: rgba( 128, 128, 128, 1 ); /* var(--INTERNAL-BOX-NEUTRAL-color) */
 	}
